<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#b6e1df">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Are you sure this is the actual issue?"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:id="@+id/txt_dialog_box_one_1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/Custom_Dialog_Box_Text_Two"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat"
        android:background="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_dialog_box_one_1"
        android:id="@+id/txt_dialog_box_one_2"
        android:textSize="19dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/Custom_Dialog_Box_Text_Three"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_dialog_box_one_2"
        android:id="@+id/txt_dialog_box_one_3"
        android:textSize="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/Custom_Dialog_Box_Text_Four"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_dialog_box_one_3"
        android:id="@+id/txt_dialog_box_one_4"
        android:textSize="19dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/Custom_Dialog_Box_Text_Fiver"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_dialog_box_one_4"
        android:id="@+id/txt_dialog_box_one_5"
        android:textSize="19dp" />



</RelativeLayout>

</ScrollView>