<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_drawer"
    android:background="#b6e1df"
    android:layout_height="match_parent"
    tools:context=".Goals.Goal_Question_7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/nav_toolbar"
            android:id="@+id/toolbar"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/toolbar">

          <ScrollView
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

              <RelativeLayout
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/layout_1">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NOW ASK YOURSELF..."
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:textColor="#326b6f"
                android:layout_marginLeft="20dp"
                android:layout_centerHorizontal="true"
                android:textSize="25dp"
                android:fontFamily="@font/montserrat"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/layout_2"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ask_your_self_pg_1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:id="@+id/ask_your_self_pg_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ask_your_self_pg_2"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/ask_your_self_pg_2"
                android:fontFamily="@font/montserrat"
                android:layout_below="@id/ask_your_self_pg_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/Ask_your_self_pg_3"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:id="@+id/ask_your_self_pg_3"
                android:fontFamily="@font/montserrat"
                android:layout_below="@id/ask_your_self_pg_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/Ask_your_self_pg_4"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16dp"
                android:id="@+id/ask_your_self_pg_4"
                android:fontFamily="@font/montserrat"
                android:layout_below="@id/ask_your_self_pg_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ask_your_self_pg_5"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/ask_your_self_pg_5"
                android:fontFamily="@font/montserrat"
                android:layout_below="@id/ask_your_self_pg_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/Ask_your_self_pg_6"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16dp"
                android:id="@+id/ask_your_self_pg_6"
                android:fontFamily="@font/montserrat"
                android:layout_below="@id/ask_your_self_pg_5"/>


            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/button_shape"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_below="@id/ask_your_self_pg_6"
                android:text="HELP THIS IS A BIT OVERWHELMING!"
                android:textSize="17dp"
                android:textColor="#326b6f"
                android:fontFamily="@font/montserrat"
                android:onClick="btn_help_overwhelming"
                android:id="@+id/btn_help_overwhelming"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:textSize="20dp"
                android:layout_below="@id/btn_help_overwhelming"
                android:textColor="#326b6f"
                android:text="NEXT"
                android:onClick="btn_next"
                android:fontFamily="@font/montserrat"/>





        </RelativeLayout>

              </RelativeLayout>


          </ScrollView>


      </RelativeLayout>



    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_drawer"
        app:menu="@menu/toolbar_nav_drawer"
        />


</androidx.drawerlayout.widget.DrawerLayout>