<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_drawer"
    android:background="#b6e1df"
    tools:context=".Goals.Goal_Question_8_Part_2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/nav_toolbar"
            android:id="@+id/toolbar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:id="@+id/image">





            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Confidant_1"
                        android:textSize="25dp"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/title_text_1"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Confidant_2"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="18dp"
                        android:id="@+id/text_1"
                        android:layout_below="@id/title_text_1"
                        />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:background="@android:color/white"
                        android:layout_below="@id/text_1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:id="@+id/bar_top"
                        android:layout_marginTop="24dp"/>

                    <View
                        android:layout_width="4dp"
                        android:layout_height="390dp"
                        android:background="@android:color/white"
                        android:layout_below="@id/text_1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="24dp"
                        android:id="@+id/bar_left"/>


                    <TextView
                        android:id="@+id/text_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bar_top"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/Confidant_question_2"
                        android:textColor="@android:color/white"

                        android:textSize="18sp" />

                    <View
                        android:layout_width="4dp"
                        android:layout_height="390dp"
                        android:background="@android:color/white"
                        android:layout_below="@id/text_1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="24dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/bar_right"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:background="@android:color/white"
                        android:layout_below="@id/bar_left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:id="@+id/bar_bottom"

                        />


                    <Button
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:layout_below="@id/bar_bottom"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat"
                        android:background="@drawable/button_shape"
                        android:layout_centerHorizontal="true"
                        android:text="NEXT"
                        android:textSize="20dp"
                        android:id="@+id/goal_8_part_2"

                        android:onClick="btn_next_goal_question_part_2"
                        android:textColor="#84c2c8"/>



                </RelativeLayout>




            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_drawer"
        app:menu="@menu/toolbar_nav_drawer"
        />

</androidx.drawerlayout.widget.DrawerLayout>